force-app/main/default/objects/Rate__c/fields/Base_Payment__c.field-meta.xml
<CustomField>
    <fullName>Base_Payment__c</fullName>
    <description>The base amount per unit donation collected</description>
    <inlineHelpText>The base amount per unit donation collected</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>