force-app/main/default/objects/Rate__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The donation type for this rate</description>
    <inlineHelpText>The donation type for this rate</inlineHelpText>
    <label>Donation Type</label>
    <referenceTo>Donation_Type__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>