force-app/main/default/objects/Rate__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit of measure</description>
    <inlineHelpText>Unit of measure</inlineHelpText>
    <label>UOM</label>
    <length>25</length>
    <type>Text</type>
</CustomField>