force-app/main/default/objects/Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Description__c</columns>
    <columns>Base_Payment__c</columns>
    <columns>UOM__c</columns>
    <columns>Type__c</columns>
    <columns>Donation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>